msr-contact-management/k8s/int/deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stt-contact-management
    app.kubernetes.io/name: microservicesruntime
  name: stt-contact-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stt-contact-management
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: stt-contact-management
        app.kubernetes.io/name: microservicesruntime
    spec:
      imagePullSecrets:
        - name: regcred
      serviceAccountName: contact-management-sa 
      containers:
        - image: ghcr.io/staillanibm/msr-contact-management:latest
          name: msr
          volumeMounts:
            - name: application-properties
              mountPath: /opt/softwareag/IntegrationServer/application.properties
              subPath:   application.properties
              readOnly:  true
            - name: secrets
              mountPath: /etc/secrets
            - name: es-truststore
              mountPath: /es/es-cert.p12
              subPath: es-cert.p12
              readOnly: true

          readinessProbe:
            tcpSocket:
              port: 5555
            initialDelaySeconds: 30
            periodSeconds: 5
            failureThreshold: 18
          livenessProbe:
            tcpSocket:
              port: 5555
            failureThreshold: 3
            initialDelaySeconds: 120
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 300m
              memory: 500Mi
            limits:
              cpu: 1000m
              memory: 2000Mi
      volumes:
        - name: application-properties
          configMap:
            name: stt-contact-management
            items:
            - key:  application.properties
              path: application.properties
        - name: secrets
          secret:
            secretName: stt-contact-management
        - name: es-truststore
          secret:
            secretName: es-truststore
            items:
            - key:  es-cert.p12
              path: es-cert.p12


---

apiVersion: v1
kind: Service
metadata:
  name: stt-contact-management
  labels:
    name: stt-contact-management
    app: stt-contact-management
    product: msr
    monitoring: enabled
spec:
  selector:
    app: stt-contact-management
  type: ClusterIP
  sessionAffinity: ClientIP
  ports:
  - port: 5555
    targetPort: 5555
    name: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stt-contact-management
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: "contact-management-int.sttlab.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: stt-contact-management
            port: 
              number: 5555
  tls:
  - hosts: 
    - contact-management-int.sttlab.local
    secretName: tls-cert
